--- a/move-stdlib/Cargo.toml
+++ b/move-stdlib/Cargo.toml
@@ -1,13 +1,7 @@
 [package]
 name = "nabob-move-stdlib"
-version = "0.1.0"
-authors.workspace = true
-edition.workspace = true
-homepage.workspace = true
-license.workspace = true
-publish.workspace = true
-repository.workspace = true
-rust-version.workspace = true
+version.workspace = true
+edition = "2021"
 
 [dependencies]
 nabob-gas-schedule = { workspace = true }
