--- a/nabob-token-objects/Move.toml
+++ b/nabob-token-objects/Move.toml
@@ -10,4 +10,4 @@ nabob_token_objects = "0x4"
 
 [dependencies]
 MoveStdlib = { local = "../move-stdlib" }
-NabobFramework = { local = "../nabob-framework"}
+NabobFramework = { local = "../naob-framework"}
