--- a/nabob-stdlib/Move.toml
+++ b/nabob-stdlib/Move.toml
@@ -1,11 +1,11 @@
 [package]
-name = "AptosStdlib"
+name = "NabobStdlib"
 version = "1.0.0"
 
 [addresses]
 std = "0x1"
-aptos_std = "0x1"
-aptos_framework = "0x1"
+nabob_std = "0x1"
+nabob_framework = "0x1"
 Extensions = "0x1" # For Prover to instantiate `{{Ext}}` in prelude.
 
 [dependencies]
