--- a/nabob-token/Move.toml
+++ b/nabob-token/Move.toml
@@ -1,12 +1,12 @@
 [package]
-name = "AptosToken"
+name = "NabobToken"
 version = "1.0.0"
 
 [addresses]
 std = "0x1"
-aptos_framework = "0x1"
-aptos_token = "0x3"
+nabob_framework = "0x1"
+nabob_token = "0x3"
 
 [dependencies]
 MoveStdlib = { local = "../move-stdlib" }
-AptosFramework = { local = "../aptos-framework"}
+NabobFramework = { local = "../nabob-framework"}
