update and fix bug

--- a/move-stdlib/Cargo.toml
+++ b/move-stdlib/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "nabob-move-stdlib"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+publish.workspace = true
+repository.workspace = true
+version.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 nabob-gas-schedule = { workspace = true }
